Update modernizer to 1.14.0 and gradle-git-properties to 4.0.1
Bump the modernizer plugin (1.13.0 -> 1.14.0) and fix the 30 violations it
newly reports by preferring modern JDK factory methods:
- String.format(...) -> String.formatted(...)
- org.apache.commons.io.FileUtils.writeStringToFile(...) -> Files.writeString(...)
- Collections.singleton/emptySet/singletonList/emptyList/singletonMap(...)
  -> Set.of(...) / List.of(...) / Map.of(...)

Also bump gradle-git-properties (2.5.7 -> 4.0.1); git.properties is still
generated correctly.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>